[project]
name = "termchatter_GrimmTMM"
version = "0.0.1"
authors = [
  { name="GrimmTMM", email="themagnetboy1207@gmail.com" },
]
description = "A simple terminal-based chatting app using Pusher"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pysher",
    "pusher",
]

[project.urls]
Homepage = "https://github.com/GrimmTMM/termchatter"
Issues = "https://github.com/GrimmTMM/termchatter/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
ignore-vcs = true
include = ["src/**"]